--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -92,11 +92,10 @@
   align-items: center;
   border-radius: initial;
 
-  &:first-child {
-    border-top-left-radius: 4px !important;
-    border-top-right-radius: 4px !important;
-  }
-
+  // &:first-child {
+  //   border-top-left-radius: 4px !important;
+  //   border-top-right-radius: 4px !important;
+  // }
 }
 
 .input {
@@ -121,6 +120,32 @@
   color: red;
 }
 
+
+// Bottom Card
+.container__section {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.item {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  color: var(--text);
+}
+
+.section {
+  display: flex;
+  justify-content: space-between;
+  width: 94%;
+  font-size: 12px;
+  margin: 0 auto;
+}
+
+.section__item {
+  margin-right: 10px;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 375px) {
   .container__images {
