--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,9 +36,9 @@
       <div class="section">
         <span>{{this.mService.todos.length}}&nbsp; items left</span>
         <div style="display: flex;">
-          <span class="section__item" (click)="allTodo()">All</span>
-          <span class="section__item" (click)="onlyActive()">Active</span>
-          <span class="section__item" (click)="onlyCompleted()">Completed</span>
+          <span class="section__item" id="itemAll" (click)="allTodo()">All</span>
+          <span class="section__item" id="itemActive" (click)="onlyActive()">Active</span>
+          <span class="section__item" id="itemCompleted" (click)="onlyCompleted()">Completed</span>
         </div>
         <span (click)="clearCompleted()" style="cursor: pointer;">Clear Completed</span>
       </div>
