--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -11,9 +11,9 @@
       <span class="item__todo" theme [ngStyle]="checkedStyles">
         {{todo.description}}
       </span>
-        <!-- <span class="item__remove" (click)="onClickRemove(todo.id)" theme>
+        <span class="item__remove" (click)="onClickRemove(todo.id)" theme>
           <i class="fas fa-times"></i>
-        </span> -->
+        </span>
     </div>
   </div>
 </ng-container>
