Fix icon + background circle

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
 <div class="container__title">
   <div class="title">
     <span class="span__title">TODO</span>
-    <img class="logo__sun" id="switch" (click)="toggle()" src="./../../assets/images/icon-sun.svg">
+    <div class="logo__sun" id="switch" (click)="toggle()"></div>
   </div>
 </div>
 
