--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -57,6 +57,8 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 // Card
@@ -99,11 +101,6 @@
   transition: 400ms;
   align-items: center;
   border-radius: initial;
-
-  // &:first-child {
-  //   border-top-left-radius: 4px !important;
-  //   border-top-right-radius: 4px !important;
-  // }
 }
 
 .input {
